# macutil

./: .gitignore  Cargo.toml  README.md  publish-instructions.md  run-gui.sh  start.sh  startdev.sh
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  preview.tape
.github/ISSUE_TEMPLATE/: bug-reports.yml  config.yml
.github/workflows/: Release.yml  bashisms.yml  fsharp.yml  preview.yml
MacUtilGUI/: App.axaml  DEPLOYMENT.md  Info.plist  MacUtilGUI.fsproj  MacUtilGUI.icns  Program.fs  README.md  TTY_FIXES.md  app.manifest  build_universal.sh  create_icon.sh  create_icon_from_logo.sh  deploy_macos.sh  publish.sh  sign_macos.sh
MacUtilGUI/Models/: ScriptCategory.fs  ScriptInfo.fs
MacUtilGUI/Services/: ScriptService.fs  TomlParser.fs
MacUtilGUI/ViewModels/: MainWindowViewModel.fs  ViewModelBase.fs
MacUtilGUI/Views/: MainWindow.axaml  MainWindow.axaml.fs
core/: Cargo.toml
core/src/: inner.rs
core/tabs/: common-script.sh
core/tabs/applications-setup/: alacritty-setup.sh
core/tabs/system-setup/: fix-finder.sh  system-cleanup.sh  tab_data.toml
scripts/: browser_install.sh  common-script.sh  fix_finder.sh  neovim_setup.sh  remove_animations.sh  tabs.toml
scripts/applications-setup/: android-debloat.sh  fastfetch-setup.sh  kitty-setup.sh  tab_data.toml  zsh-setup.sh
scripts/system-setup/: dev-setup.sh  fix-finder.sh  remove-animations.sh  system-cleanup.sh  tab_data.toml
tui/: Cargo.toml
tui/src/: confirmation.rs  filter.rs  floating_text.rs  running_command.rs  state.rs
xtask/: Cargo.toml
xtask/src/: docgen.rs
(+29 files in other folders)
