[package]
name = "macutil_tui"
description = "Chris Titus Tech's MacOS Toolbox - Macutil is a toolbox to fix all the INSANE defaults Apple forces on its users."
documentation = "https://christitustech.github.io/macutil"
readme = "../README.md"
edition = "2021"
license.workspace = true
repository = "https://github.com/ChrisTitusTech/macutil/tree/main/tui"
version.workspace = true
include = ["src/*.rs", "Cargo.toml", "cool_tips.txt", "../man/macutil.1"]

[features]
default = ["tips"]
tips = ["rand"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
oneshot = { version = "0.1.8", features = ["std"], default-features = false }
portable-pty = "0.8.1"
ratatui = { version = "0.29.0", features = ["crossterm"], default-features = false }
tui-term = { version = "0.2.0", default-features = false }
time = { version = "0.3.36", features = ["formatting", "local-offset", "macros"], default-features = false }
unicode-width = { version = "0.2.0", default-features = false }
rand = { version = "0.8.5", optional = true }
macutil_core = { version = "0.0.1", path = "../core" }
tree-sitter-highlight = "0.24.4"
tree-sitter-bash = "0.23.3"
nix = { version = "0.29.0", features = [ "user" ] }
vt100-ctt = "0.16.0"

[[bin]]
name = "macutil"
path = "src/main.rs"
